Added idletimeout and fix token storage for add User and Add Provider

--- a/src/components/UserProfile.css
+++ b/src/components/UserProfile.css
@@ -1,3 +1,5 @@
+
+
 /**{
   margin: 0;
   padding: 0;
@@ -5,6 +7,12 @@
 }*/
 
 .UserProfile {
+  background-color: slategray;
+  color: black;
+  padding: 20px;
+}
+
+.providerCard {
   background-color: whitesmoke;
   color: black;
   padding: 20px;
