--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -68,8 +68,13 @@ body{
 .logo-container{
   display: flex;
   align-items: center;
-
 }
+
+.logo-container:hover{
+  transform: scale(1.1);
+}
+
+
 .logo{
   font-size: 3rem;
   color: var(--text-color);
