--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -106,8 +106,13 @@ body{
 }
 
 
-.navbar a:hover, .navbar a.active{
-  color: white;
+.navbar a:hover{
+  color: skyblue;
+  border-bottom: 3px solid var(--main-color);
+}
+
+.navbar a.active{
+  color: var(--main-color) !important;
   border-bottom: 3px solid var(--main-color);
 }
 
